$Id: CHANGES,v 1.270 2005/01/24 10:32:01 stelian Exp $

Changes between versions 0.4b39 and 0.4b40 (released ????????????????)
======================================================================

1.	Changed restore to emit warnings (instead of emitting a fatal
	error) if a file (or a directory) is unavailable for a 
	comparision (if the user doesn't have the necessary permissions
	to access it for example). Thanks to Kenneth Porter
	<shiva@sewingwitch.com> for the bug report.

Changes between versions 0.4b38 and 0.4b39 (released January 21, 2005)
======================================================================

1.	The newly added dump_on_cd_3 example was buggy, replace it
	with an updated version from Andrew Basterfield
	<bob@cemetery.homeunix.org>.

2.	Made restore to chdir() back into the initial directory when
	dumping core while aborting a comparision operation. The
	previous behaviour was to write the corefile at the root of
	the directory being compared, which could very well be 
	read only and preventing the corefile generation. Thanks
	to Kenneth Porter <shiva@sewingwitch.com> for the bug report.

3.	Silenced the failure to call fgetflags() when comparing an
	entry which has no ext2 attributes (as in lsattr()).

4.	Fix a brown paper bug in restore -C which broke restore and
	caused modifications on the filesystem being compared
	(directories containing a file with the same name as the
	directory get renamed to RSTTMP...). Thanks to Kenneth Porter
	<shiva@sewingwitch.com> for finding the bug and helping me
	reproduce it.

5.	Made restore -C force the -N flag (no writing allowed on
	the disk) in order to prevent more bugs like the above one.

Changes between versions 0.4b37 and 0.4b38 (released January 7, 2005)
=====================================================================

1.	Fix a couple of troff syntax bugs in the man pages.
	Thanks to Eric Raymond <esr@thyrsus.com> for the patch.
